--- a/FRONT/src/app/components/views/home/carrinho/carrinho.component.html
+++ b/FRONT/src/app/components/views/home/carrinho/carrinho.component.html
@@ -21,14 +21,14 @@
             <!-- Coluna do Quantidade -->
             <ng-container matColumnDef="quantidade">
                 <th class="header" mat-header-cell *matHeaderCellDef>
-                    Descrição
+                    Quantidade
                 </th>
                 <td mat-cell *matCellDef="let item">{{ item.quantidade }}</td>
             </ng-container>
             <!-- Coluna do Quantidade -->
             <ng-container matColumnDef="preco">
                 <th class="header" mat-header-cell *matHeaderCellDef>
-                    Quantidade
+                    Descrição
                 </th>
                 <td mat-cell *matCellDef="let item">
                     {{ item.preco | currency: "BRL" }}
@@ -44,4 +44,7 @@
             Total: {{ valorTotal | currency: "BRL" }}
         </mat-card-title>
     </mat-card-header>
+    <button mat-raised-button color="warn" (click)="finalizar()">
+        Finalizar Comprar
+    </button>
 </mat-card>
